# ExampleCmakeandCPack

./: CMakeLists.txt  README.md  version.cpp
cmake/: AddSources.cmake  CpackConfig.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  version.cpp.in
include/: version.h
src/: CMakeLists.txt  exampleproject.cpp
